--- a/python爬虫练习/python笔记/爬虫.md
+++ b/python爬虫练习/python笔记/爬虫.md
@@ -58,3 +58,37 @@ xpath
 from lxml import etree
 element = etree.HTML("html字符串")
 element.xpath("")
+
+### 基础知识点的学习
+- format:字符串格式化的一种方式
+'今天{}不好'.format(1)
+'今天{}不好{}'.format({1},{2})
+'今天{}不好'.format([1])
+
+- 列表推导式
+ - 帮助我们快速的生成包含一堆数据的列表
+  '[i+10 for i in rangr(10)]'--->[10,11,12,...19]
+  '["10月{}日".forma(i) for i in range(1,10)]'
+  -->["10月1日","10月2日",.."10月9日"]
+  - 字典推导式
+  - 帮助我们快速的生成包含一堆数据的字典
+  {i+10:for i in rangr(10)} #{10:0,11:1,12:2...19:9}
+  {"a{}".format(i):10 for i in
+  range(3)}#{"a0":10,"a1":10,"a2":10}
+  - 三元运算符
+   - if 后面的条件成立，就把if后面的结果赋值给a，否则把else后面结果赋值给a
+   a = 10 if 4>3 else 20 #a =10
+   a = 10 if 4<3 else 20 #a =20  
+
+# 讨论
+- 1.url
+ - 知道url地址的规律和总和得页码数：构造url的地址的列表
+ - start_url
+
+- 2.发送请求，获取响应
+  - requests
+
+- 3.提取数据
+  - 返回json字符串：json模块
+  - 返回的是html字符串：lxml模块etree，xpath方法
+- 4.保存
